--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "homepage": "https://github.com/yuezk/filter-gradient#readme",
   "devDependencies": {
+    "chai": "^3.4.1",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.0",
     "gulp-mocha": "^2.1.3",
     "mocha": "^2.3.3"
+  },
+  "dependencies": {
+    "color": "^0.10.1"
   }
 }
